--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,21 @@
-steps:
-  - name: Greet user
-    run: echo "Hello, ${{ github.actor }}!"
+name: Manual Task Example
+on:
+  workflow_dispatch: # This enables the manual "Run workflow" button
+    inputs:
+      environment:
+        description: 'Environment to target'
+        required: true
+        type: choice
+        options:
+          - STG
+          - others
+
+jobs:
+  manual-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log User Input
+        run: |
+          echo "Run started by: ${{ github.actor }}"
+          echo "Reason: ${{ github.event.inputs.reason }}"
+          echo "Environment: ${{ github.event.inputs.environment }}"
